# landmarks-analysis

./: README.md
cmd/nan-module/: CMakeLists.txt  README.md  main.cpp  package.json
cmd/nan-module-pipeline/: CMakeLists.txt  README.md  main.cpp  package.json
cmd/pipeline-experiments/: CMakeLists.txt  README.md  main.cpp
cmd/regular/: CMakeLists.txt  README.md  main.cpp
cmd/regularv2/: CMakeLists.txt  main.cpp
src/: CloudsLog.cpp  CloudsLog.h  Computation.cpp  Computation.h  Cropper.cpp  EyeRightCorner.cpp  EyeRightCorner.h  GeometricFeatures.cpp  GeometricFeatures.h  Main.cpp  Main.h  NosetipFinder.cpp  NosetipFinder.h  Pipeline.cpp  Pipeline.h  PipelineMain.cpp  PipelineMain.h  Utils.cpp  Utils.h
